# pycounts_524_2024

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  example.ipynb  pyproject.toml  sandbox.py
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_524_2024/: __init__.py
tests/: test_pycounts.py  test_pycounts_524_2024.py
